<resources>
    <string name="language_code">en</string>
    <string name="app_name">Conto Redemptions</string>
    <string name="error_try_again">An error occurred. Try again later</string>
    <string name="error_connection_try_again">Connection error. Try again later</string>
    <string name="error_insufficient_balance">Insufficient balance</string>
    <string name="error_payment_amount_less_than_fee">Payment amount is less than recipient\'s fee</string>
    <string name="error_unauthorized">The session has been expired</string>
    <string name="error_tx_general">Transaction failed. Try again later</string>
    <string name="error_tx_bad_auth">Transaction signature is invalid</string>
    <string name="error_tx_limits">Transaction exceeds limits set to your account</string>
    <string name="error_tx_insufficient_balance">@string/error_insufficient_balance</string>
    <string name="error_tx_invalid_amount">Transaction amount is invalid</string>
    <string name="error_tx_malformed">Transaction is malformed</string>
    <string name="error_tx_account_blocked">Your account is blocked</string>
    <string name="error_tx_invalid_fee">Transaction fee is invalid</string>
    <string name="error_tx_not_allowed">You are not allowed to perform this action</string>
    <string name="error_tx_cross_self">Current order crosses one of your existing orders</string>
    <string name="error_tx_not_found">Requested entry not found</string>
    <string name="error_tx_kyc_required_to_own_asset">Only verified accounts can own this asset</string>
    <string name="retry">Retry</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="error_no_companies">No companies found</string>
    <string name="select_company_title">Select a company</string>
    <string name="scan">Scan</string>
    <string name="redemptions_history">History</string>
    <string name="enable_flash_action">Turn on flashlight</string>
    <string name="disable_flash_action">Turn off flashlight</string>
    <string name="redemption_scan_title">Scan redeemable QR code</string>
    <string name="camera_permission_required_hint">Camera permission is required</string>
    <string name="open_settings">Open settings</string>
    <string name="template_error_redemption_not_own_asset">\"%1$s\" is not owned by your company</string>
    <string name="processing_progress">Processing…</string>
    <string name="operation_redemption">Redemption</string>
    <string name="successfully_accepted_redemption">Redemption has been accepted</string>
    <string name="error_invalid_redemption_request">Invalid redemption request</string>
    <string name="error_redemption_request_no_more_valid">The request is already processed and no more valid</string>
    <string name="template_balance_change_by_account">By %1$s</string>
    <string name="no_redemptions_yet">No accepted requests yet</string>
    <string name="account">Account</string>
    <string name="redemption_company">Company</string>
    <string name="loading_data">Loading data…</string>
    <string name="error">Error</string>
    <string name="ok" translatable="false">OK</string>
    <string name="booking">Booking</string>
    <string name="booking_room">Room</string>
    <string name="time_from">From</string>
    <string name="time_until">Until</string>
    <string name="booking_state">Status</string>
    <string name="booking_state_waiting_for_payment">Waiting for payment</string>
    <string name="booking_state_canceled">Canceled</string>
    <string name="booking_state_expired">Expired</string>
    <string name="pos_terminal">Terminal</string>
    <string name="enable_nfc_to_use_this_feature_hint">Enable NFC to use this feature</string>
    <string name="asset">Asset</string>
    <string name="accept_payment">Accept payment</string>
    <string name="error_no_assets">No assets found</string>
    <string name="accept_payment_short">Accept</string>
    <string name="waiting_for_pos_payment">Waiting for payment</string>
    <string name="pos_payment_phones_hint">Bring client\'s phone to the back of this one</string>
    <string name="pos_payment_accepted_successfully">Payment has been accepted</string>
    <string name="settings">Settings</string>
    <string name="app_network">Network</string>
    <string name="change_app_network">Change the network</string>
    <string name="web_client_url">Web-client address</string>
    <string name="web_client_url_hint">Enter Conto web-client address</string>
    <string name="use_this_network">Use this network</string>
    <string name="error_invalid_network">Invalid network</string>
    <string name="network_has_been_changed">Network has been changed</string>
    <string name="select_more_assets">Select more</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
