<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/appbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LimitedMatchParentWidthConstraint"
        android:padding="@dimen/standard_padding"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintTop_toTopOf="@null">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/url_edit_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/web_client_url"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/web_client_url_hint"
                android:imeOptions="actionGo"
                android:inputType="text|textUri">

                <requestFocus />
            </androidx.appcompat.widget.AppCompatEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_standard_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/url_edit_text_layout"
            app:layout_constraintTop_toBottomOf="@id/url_edit_text_layout">

            <include layout="@layout/progress" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_button"
                style="@style/PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/standard_padding"
                android:text="@string/use_this_network"
                tools:targetApi="lollipop" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>